重构，增加功能，升级版本