@@ -6,6 +6,7 @@ import com.kuuhaku.robot.entity.music.NetEaseMusic;
 import lombok.extern.slf4j.Slf4j;
 import net.mamoe.mirai.message.data.MusicKind;
 import net.mamoe.mirai.message.data.MusicShare;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
@@ -14,32 +15,34 @@ import java.io.IOException;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collector;
-import java.util.stream.Collectors;
 
 /**
- * @Author   by kuuhaku
- * @Date     2021/2/13 21:42
+ * @Author by kuuhaku
+ * @Date 2021/2/13 21:42
  * @Description 网易云音乐Api
  */
 @Service
 @Slf4j
 public class NetEaseMusicApi {
+    @Value("${robot.music.cookie}")
+    private String cookie;
 
-    public List<NetEaseMusic> getNetEaseMusicPage(String musicName){
+    public List<NetEaseMusic> getNetEaseMusicPage(String musicName) {
         String jsonStr = null;
         List<NetEaseMusic> list = new ArrayList<>();
         try {
             // 转换成encode
-            String str = URLEncoder.encode(musicName, "utf-8");
+            String str = URLEncoder.encode(musicName, StandardCharsets.UTF_8);
             //拼接url
-            URL url = new URL("http://music.163.com/api/search/pc?s=" + str + "&type=1&limit=10");
+            URL url = new URL("http://music.163.com/api/search/pc?type=1&s=" + str + "&type=1&limit=10");
             HttpURLConnection httpCon = (HttpURLConnection) url.openConnection();
             httpCon.setConnectTimeout(3000);
             httpCon.setDoInput(true);
             httpCon.setRequestMethod("GET");
+            httpCon.setRequestProperty("Cookie", cookie);
             // 获取相应码
             int respCode = httpCon.getResponseCode();
             if (respCode == HttpStatus.OK.value()) {
@@ -53,6 +56,7 @@ public class NetEaseMusicApi {
                 }
                 // 将内存流转换为字符串
                 jsonStr = out.toString();
+                log.info(jsonStr);
                 JSONArray jsonArray = JSONArray.parseArray(JSONObject.parseObject(JSONObject.parseObject(jsonStr).getString("result")).getString("songs"));
                 //jsonArray 内就是歌曲信息了 之后可以用jsonArray.getJSONObject(0).getString(/*这里放你要获取的字段名如id*/)获取详细信息
                 if (jsonArray == null) {
